// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popover snapshots > should render Popover 1`] = `
<DocumentFragment>
  <div
    class="Popover"
    data-test-popover="popover"
    style="left: 0px; top: 0px;"
  >
    <div
      class="PopoverItem"
      data-test-popover-item="0"
    >
      <div
        class="PopoverItem__check-icon Icon Icon--neutral-1"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="PopoverItem__icon Icon Icon--neutral-1"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="PopoverItem"
      data-test-popover-item="1"
    >
      <div
        class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="PopoverItem__icon Icon Icon--neutral-1"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="PopoverSeparator"
    />
  </div>
</DocumentFragment>
`;

exports[`Popover snapshots > should render not visible item 1`] = `
<DocumentFragment>
  <div
    class="Popover Popover--selected"
    data-test-popover="popover"
    style="left: 0px; top: 0px;"
  >
    <div
      class="PopoverItem"
      data-test-popover-item="0"
    >
      <div
        class="PopoverItem__check-icon Icon Icon--neutral-1"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="PopoverItem__icon Icon Icon--neutral-1"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="PopoverItem"
      data-test-popover-item="1"
    >
      <div
        class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="PopoverItem__icon Icon Icon--neutral-1"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="PopoverSeparator"
    />
  </div>
</DocumentFragment>
`;

exports[`Popover snapshots > should render selected 1`] = `
<DocumentFragment>
  <div
    class="Popover Popover--selected"
    data-test-popover="popover"
    style="left: 0px; top: 0px;"
  >
    <div
      class="PopoverItem"
      data-test-popover-item="0"
    >
      <div
        class="PopoverItem__check-icon Icon Icon--neutral-1"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="PopoverItem__icon Icon Icon--neutral-1"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="PopoverItem"
      data-test-popover-item="1"
    >
      <div
        class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
        data-test-icon="check"
        height="12"
        name="Check"
        width="12"
      />
      <div
        class="PopoverItem__icon Icon Icon--neutral-1"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
      <small
        class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        text
      </small>
    </div>
    <div
      class="PopoverSeparator"
    />
  </div>
</DocumentFragment>
`;
